--- a/.env.example
+++ b/.env.example
@@ -28,10 +28,10 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_USERNAME=6afdb0772ad293
+MAIL_PASSWORD=042c911c131c73
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=1feng-5a7fed@inbox.mailtrap.io
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
